Final results submitted to SemEval2020
Additional data manipulation

--- a/SemEval2020_Task5_Subtask_1.ipynb
+++ b/SemEval2020_Task5_Subtask_1.ipynb
@@ -6,8 +6,7 @@
       "name": "SemEval2020-Task5-Subtask-1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
-      "include_colab_link": true
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +15,6 @@
     "accelerator": "GPU"
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/lenyabloko/SemEval2020/blob/master/SemEval2020_Task5_Subtask_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -47,11 +36,17 @@
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')\n",
         "\n",
-        "#from google.colab import files\n",
-        "#uploaded = files.upload()\n",
+        "#!cp /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-2/train.csv /content\n",
+        "#!cp /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-2/test.csv /content\n",
         "\n",
-        "!cp /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-1/train.csv /content\n",
-        "!cp /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-1/test.csv /content"
+        "!cp /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-2/antecedents.tsv /content\n",
+        "!cp /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-2/consequents.tsv /content\n",
+        "!cp /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-2/simplified.tsv /content\n",
+        "\n",
+        "!cp -r /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-1/xlm-clm-ende-1024_batch32_epoch4.test /content/outputs\n",
+        "#!cp -r /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-1/roberta_batch32_epoch4.test /content/outputs\n",
+        "\n",
+        "#!cp /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-1/test.tsv /content"
       ],
       "execution_count": 0,
       "outputs": []
@@ -69,7 +64,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pcCOsgyHbnrP",
+        "id": "YEFSrk8ikLDl",
         "colab_type": "code",
         "colab": {}
       },
@@ -78,24 +73,20 @@
         "\n",
         "prefix = '/content/'\n",
         "train_df = pd.read_csv(prefix + 'train.csv', header=None)\n",
-        "train_df=train_df.drop(index=0)\n",
-        "  \n",
-        "# display \n",
-        "train_df.head()\n",
+        "train_df = train_df.drop(index=0)\n",
         "\n",
         "dev_df = pd.DataFrame({\n",
         "    'id':train_df[0],\n",
-        "    'labels':train_df[1],\n",
+        "    'labels':[1]*train_df.shape[0],\n",
         "    'alpha':['a']*train_df.shape[0],\n",
-        "    'text': train_df[2].replace(r'\\n', ' ', regex=True)\n",
+        "    'text': train_df[3]  # 1-sentence, 2-antecedent, 3-consequent\n",
         "})\n",
-        "dev_df.head()\n",
         "\n",
         "train_df = pd.DataFrame({\n",
         "    'id':train_df[0],\n",
-        "    'labels':train_df[1],\n",
+        "    'labels':[1]*train_df.shape[0],\n",
         "    'alpha':['a']*train_df.shape[0],\n",
-        "    'text': train_df[2].replace(r'\\n', ' ', regex=True)\n",
+        "    'text': train_df[3]\n",
         "})\n",
         "train_df.head()"
       ],
@@ -115,18 +106,111 @@
         "prefix = '/content/'\n",
         "test_df = pd.read_csv(prefix + 'test.csv', header=None)\n",
         "test_df = test_df.drop(index=0)\n",
-        "  \n",
+        "\n",
         "test_df = pd.DataFrame({\n",
         "    'id':test_df[0],\n",
         "    'labels':[0]*test_df.shape[0],\n",
         "    'alpha':['a']*test_df.shape[0],\n",
-        "    'text': test_df[1].replace(r'\\n', ' ', regex=True)\n",
+        "    'text': test_df[1]\n",
         "})\n",
-        "test_df.head()\n",
+        "test_df.head()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "A25sSGU2lG0M",
+        "colab_type": "text"
+      },
+      "source": [
+        "PRE-ANALYZED TRAIN/TEST DATA - Skip this step in train mode"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pcCOsgyHbnrP",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import pandas as pd\n",
+        "prefix = '/content/'\n",
+        "df = pd.read_csv(prefix + 'consequents.tsv', sep='\\t', delimiter=None, header=None)\n",
         "\n",
-        "train_df.to_csv(prefix+'train.tsv', sep='\\t', index=False, header=False)\n",
-        "test_df.to_csv(prefix+'test.tsv', sep='\\t', index=False, header=False)\n",
-        "dev_df.to_csv(prefix + 'dev.tsv', sep='\\t', index=False, header=False)"
+        "test_df = pd.DataFrame({\n",
+        "    'id': df[0],\n",
+        "    'labels':['0']*df.shape[0],\n",
+        "    'alpha':['a']*df.shape[0],\n",
+        "    'text': df[2].replace(r'[\\[\\'\\\"\\]]', '', regex=True)\n",
+        "})\n",
+        "\n",
+        "test_df.head(10)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vXxXxi_i0rlZ",
+        "colab_type": "text"
+      },
+      "source": [
+        "SIMPLIFIED DATA"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WtHWykppzo-8",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import pandas as pd\n",
+        "prefix = '/content/'\n",
+        "df = pd.read_csv(prefix + 'simplified.tsv', sep='\\t', delimiter=None, header=None)\n",
+        "\n",
+        "test_df = pd.DataFrame({\n",
+        "    'id': df[0],\n",
+        "    'labels':['0']*df.shape[0],\n",
+        "    'alpha':['a']*df.shape[0],\n",
+        "    'text': df[2].replace(r'[\\[\\'\\\"\\]]', '', regex=True)\n",
+        "})\n",
+        "\n",
+        "test_df.head()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "IZPKKQVHpvfj",
+        "colab_type": "text"
+      },
+      "source": [
+        "LOAD TRAIN/TEST DATA"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jYY4Ik6ngWuS",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#print(train_df.count())\n",
+        "#print(dev_df.count())\n",
+        "print(test_df.count())\n",
+        "\n",
+        "#train_df.to_csv(prefix+'train.tsv', sep='\\t', index=False, header=False)\n",
+        "#dev_df.to_csv(prefix + 'dev.tsv', sep='\\t', index=False, header=False)\n",
+        "test_df.to_csv(prefix+'test.tsv', sep='\\t', index=False, header=False)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -687,7 +771,7 @@
         "        prediction = example.label\n",
         "        if any(mismatch.sentenceId == example.sentenceId for mismatch in mismatches):\n",
         "          prediction = str(int(not bool(int(prediction))))\n",
-        "          print(\"Prediction changed for sentence: \"+example.sentenceId + \" was \"+example.label+ \" now \"+prediction)\n",
+        "          #print(\"Prediction changed for sentence: \"+example.sentenceId + \" was \"+example.label+ \" now \"+prediction)\n",
         "        writer.write(\"%s,%s\\n\" % (example.sentenceId, prediction))\n",
         "\n",
         "    output_report_file = os.path.join(eval_output_dir, \"report_results.csv\")\n",
@@ -793,8 +877,8 @@
       "source": [
         "args = {\n",
         "    'data_dir': '',\n",
-        "    'model_type': 'roberta',\n",
-        "    'model_name': 'roberta-base',\n",
+        "    'model_type': 'xlm',\n",
+        "    'model_name': 'xlm-clm-ende-1024',\n",
         "    'task_name': 'binary',\n",
         "    'output_dir': 'outputs/',\n",
         "    'cache_dir': 'cache/',\n",
@@ -808,7 +892,7 @@
         "    'eval_batch_size': 32,\n",
         "\n",
         "    'gradient_accumulation_steps': 1,\n",
-        "    'num_train_epochs': 2,\n",
+        "    'num_train_epochs': 3,\n",
         "    'weight_decay': 0,\n",
         "    'learning_rate': 4e-5,\n",
         "    'adam_epsilon': 1e-8,\n",
@@ -951,7 +1035,7 @@
         "            model.to(device) # reload model from checkpoint\n",
         "            result, wrong = evaluate(model, tokenizer, prefix=directory, dataset=False) # change to False for test\n",
         "\n",
-        "            result = dict((k + '_{}'.format(global_step), v) for k, v in result.items())\n",
+        "            result = dict((k + '_{}'.format(checkpoint), v) for k, v in result.items())\n",
         "            results.update(result)"
       ],
       "execution_count": 0,
@@ -982,7 +1066,7 @@
         "colab": {}
       },
       "source": [
-        "!mv /content/outputs /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-1/"
+        "!mv /content/outputs /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-2/"
       ],
       "execution_count": 0,
       "outputs": []
