--- a/SemEval2020_Task5_Subtask_2.ipynb
+++ b/SemEval2020_Task5_Subtask_2.ipynb
@@ -530,30 +530,6 @@
         "      if p1 in p2 and len(p2) > len(p1):\n",
         "        past.remove(p1)  \n",
         "\n",
-        "\n",
-        "\n",
-        "  m_row = pd.Series(data={\n",
-        "    'id': test_df['id'][ind],\n",
-        "    'labels':'1', # gold label\n",
-        "    'text': test_df['text'][ind]\n",
-        "  }, name = str(i) )\n",
-        "  modal_df = modal_df.append(m_row)\n",
-        "\n",
-        "  s_row = pd.Series(data={\n",
-        "    'id': test_df['id'][ind],\n",
-        "    'labels':'0',\n",
-        "    'text': test_df['text'][ind]\n",
-        "  }, name = str(i) )\n",
-        "  simple_df = simple_df.append(s_row)   \n",
-        "  i = i+1\n",
-        "\n",
-        "  p_row = pd.Series(data={\n",
-        "    'id': test_df['id'][ind],\n",
-        "    'labels':'1', # gold label\n",
-        "    'text': test_df['text'][ind]\n",
-        "  }, name = str(j) )\n",
-        "  past_df = past_df.append(p_row)  \n",
-        "  j = j+1\n",
         "    \n",
         "\n",
         "  for p in past:\n",
@@ -576,7 +552,7 @@
         "      s_row = pd.Series(data={\n",
         "        'id': test_df['id'][ind]+'A'+ str(j) + 'C'+ str(i),\n",
         "        'labels':'0',\n",
-        "        'text': p +' '+ m\n",
+        "        'text': p +' | '+ m\n",
         "      }, name = str(i) )\n",
         "      simple_df = simple_df.append(s_row) \n",
         "\n",
