Replaced check 'if string in' with '=='
Recall seesm to be unaffected by the strickter check on key words

--- a/SemEval2020_Task5_Subtask_2.ipynb
+++ b/SemEval2020_Task5_Subtask_2.ipynb
@@ -145,13 +145,21 @@
         "                if 'would'==item['word'].lower() or 'd'==item['word'].lower():\n",
         "                  phrase = scrap_from(obj, item)\n",
         "                  modal.append(phrase) # only phrase on the right from item\n",
+        "                if 'could'==item['word'].lower():\n",
+        "                  phrase = scrap_from(obj, item)\n",
+        "                  modal.append(phrase) # only phrase on the right from item  \n",
         "\n",
         "                if 'MD' in arr: \n",
         "                  arr.remove('MD')\n",
-        "                  if 'would' in obj[0]['word'].lower():\n",
-        "                    modal.append(obj)\n",
-        "                  if 'could' in obj[0]['word'].lower():\n",
-        "                    modal.append(obj)\n",
+        "                  for f in obj: # re-visit each fragment \n",
+        "                    if f['word'].lower().lstrip().endswith(' d'):\n",
+        "                      modal.append(obj)\n",
+        "                    if f['word'].lower().lstrip().startswith('would'):\n",
+        "                      modal.append(obj)\n",
+        "                    if f['word'].lower().lstrip().startswith('could'):\n",
+        "                      modal.append(obj)\n",
+        "                    if f['word'].lower().lstrip().startswith('might'):\n",
+        "                      modal.append(obj)  \n",
         "\n",
         "                if 'NP' in arr: \n",
         "                  arr.remove('NP')\n",
@@ -160,7 +168,7 @@
         "                if 'VP' in arr:\n",
         "                  arr.remove('VP')\n",
         "                  #verb.append(obj) # can subsume 'MD'\n",
-        "                  if 'wish' in obj[0]['word'].lower():\n",
+        "                  if 'wish' == obj[0]['word'].lower():\n",
         "                    past.append(obj)  \n",
         "                  if 'should' in item['word'].lower():\n",
         "                    phrase = scrap_from(obj, item)\n",
@@ -174,15 +182,13 @@
         "                    past.append(obj)  \n",
         "                  if 'had' in obj[0]['word'].lower():\n",
         "                    past.append(obj)\n",
-        "\n",
-        "                    \n",
+        "            \n",
         "                if 'RB' in arr: \n",
         "                  arr.remove('RB')\n",
-        "                  if 'even' in obj[0]['word'].lower():\n",
+        "                  if 'even' == obj[0]['word'].lower():\n",
         "                    past.append(obj)\n",
-        "                  if 'instead' in obj[0]['word'].lower():\n",
-        "                    past.append(obj)\n",
-        "\n",
+        "                #  if 'instead' in obj[0]['word'].lower():\n",
+        "                #    past.append(obj)\n",
         "                #  if 'whichever' in obj[0]['word'].lower():\n",
         "                #    past.append(obj)  \n",
         "                #  if 'whatever' in obj[0]['word'].lower(): \n",
@@ -201,22 +207,22 @@
         "                #       past.append(s)       \n",
         "                if 'IN' in arr: \n",
         "                    arr.remove('IN')   \n",
-        "                    if 'if' in obj[0]['word'].lower(): # space after 'if'\n",
+        "                    if 'if' == obj[0]['word'].lower(): # space after 'if'\n",
         "                      past.append(obj)\n",
-        "                    if 'with' in obj[0]['word'].lower():\n",
+        "                    if 'with' == obj[0]['word'].lower():\n",
         "                      past.append(obj) \n",
-        "                    if 'for' in obj[0]['word'].lower():\n",
-        "                      past.append(obj) \n",
+        "                    #if 'for' == obj[0]['word'].lower(): # \"for example\"\n",
+        "                    #  past.append(obj) \n",
         "\n",
         "                if 'CC' in arr: \n",
         "                    arr.remove('CC') \n",
-        "                    if 'in' in obj[0]['word'].lower():\n",
+        "                    if 'in' == obj[0]['word'].lower():\n",
         "                      past.append(obj)  \n",
-        "                    if 'but' in obj[0]['word'].lower():\n",
+        "                    if 'but' == obj[0]['word'].lower():\n",
         "                      past.append(obj)   \n",
-        "                    if 'because' in obj[0]['word'].lower():\n",
+        "                    if 'because' == obj[0]['word'].lower():\n",
         "                      past.append(obj)  \n",
-        "                    if 'although' in obj[0]['word'].lower():\n",
+        "                    if 'although' == obj[0]['word'].lower():\n",
         "                      past.append(obj)\n",
         "              \n",
         "              #arr.append(item) # uncomment for the full set\n",
@@ -377,7 +383,7 @@
       },
       "source": [
         "def remove_from(past, modal, empty=1):\n",
-        "  antecedents = past.copy()\n",
+        "  #antecedents = past.copy()\n",
         "\n",
         "  for m in sorted(modal,key=len): # in order of longer consequents\n",
         "    for p in reversed(sorted(past,key=len)): # shorter antecedents\n",
@@ -385,12 +391,12 @@
         "          if p in past and len(past) > empty: # can't be left empty!\n",
         "            past.remove(p)  \n",
         "          \n",
-        "  for a in antecedents:\n",
-        "    for c in modal: # consequents (i.e. potential future)\n",
-        "      if c in a: # a{c} wrapper around(potential) future\n",
-        "        if a in past and len(past) > empty:\n",
-        "            past.remove(a) # remove the pa{}st wrapper\n",
-        "            #print(a) # was problematic in some cases \n",
+        "  #for a in antecedents:\n",
+        "  #  for c in modal: # consequents (i.e. potential future)\n",
+        "  #    if c in a: # a{c} wrapper around(potential) future\n",
+        "  #      if a in past and len(past) > empty:\n",
+        "  #          past.remove(a) # remove the pa{}st wrapper\n",
+        "  #          #print(a) # was problematic in some cases \n",
         "\n",
         "  return past          "
       ],
@@ -429,7 +435,7 @@
         "import nltk\n",
         "nltk.download('punkt')\n",
         "\n",
-        "original = \"If the ACC collected and controlled the data themselves, then the ACC could assure the data's privacy, but they did not.\"\n",
+        "original = \"Of course, if previous McCain voters would do whatever he suggested, then Graham would have been doing a lot better in the Granite State.\"\n",
         "\n",
         "verbs = list()\n",
         "modal = list()\n",
@@ -441,7 +447,7 @@
         "#texts = original.rsplit(',') # chunck the sentence\n",
         "#for text in texts:\n",
         "\n",
-        "#text = original.replace(',', ' ')\n",
+        "text = original #.replace(',', ' ')\n",
         "text = text.replace('\\\"','') # remove double quotes\n",
         "text = text.replace('\\'','') # remove quotes\n",
         "#print(text)\n",
@@ -598,7 +604,7 @@
         "  nounp = list()\n",
         "  nouns = list()\n",
         "\n",
-        "  text = original.replace(',', ' ')\n",
+        "  text = original #.replace(',', ' ')\n",
         "  text = text.replace('\\\"','') # remove double quotes\n",
         "  text = text.replace('\\'','') # remove quotes\n",
         "\n",
