Defragmentation of antecedents
Added defragmentation function and extensive adjustments for special cases and characters

--- a/SemEval2020_Task5_Subtask_2.ipynb
+++ b/SemEval2020_Task5_Subtask_2.ipynb
@@ -24,7 +24,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')\n",
         "\n",
-        "#!cp /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-2/train.csv /content\n",
+        "!cp /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-1/train.csv /content\n",
         "!cp /content/gdrive/My\\ Drive/Colab\\ Notebooks/Subtask-2/test.csv /content"
       ],
       "execution_count": 0,
@@ -158,6 +158,8 @@
         "                      modal.append(obj)\n",
         "                    if f['word'].lower().lstrip().startswith('could'):\n",
         "                      modal.append(obj)\n",
+        "                    if f['word'].lower().lstrip().startswith('should'):\n",
+        "                      modal.append(obj)\n",
         "                    if f['word'].lower().lstrip().startswith('might'):\n",
         "                      modal.append(obj)  \n",
         "\n",
@@ -206,7 +208,9 @@
         "                #     if s['word'].lower().lstrip().startswith('if '):\n",
         "                #       past.append(s)       \n",
         "                if 'IN' in arr: \n",
-        "                    arr.remove('IN')   \n",
+        "                    arr.remove('IN') \n",
+        "                    if 'in' == obj[0]['word'].lower():\n",
+        "                      past.append(obj)  \n",
         "                    if 'if' == obj[0]['word'].lower(): # space after 'if'\n",
         "                      past.append(obj)\n",
         "                    if 'with' == obj[0]['word'].lower():\n",
@@ -215,9 +219,7 @@
         "                    #  past.append(obj) \n",
         "\n",
         "                if 'CC' in arr: \n",
-        "                    arr.remove('CC') \n",
-        "                    if 'in' == obj[0]['word'].lower():\n",
-        "                      past.append(obj)  \n",
+        "                    arr.remove('CC')   \n",
         "                    if 'but' == obj[0]['word'].lower():\n",
         "                      past.append(obj)   \n",
         "                    if 'because' == obj[0]['word'].lower():\n",
@@ -248,13 +250,17 @@
       },
       "source": [
         "def scrap_from(obj, item):\n",
-        "  phrase = str()\n",
+        "  word = str()\n",
+        "  prev = str()\n",
         "  for f in obj:\n",
         "    if f['word'] == item['word']:\n",
-        "      phrase = ' '\n",
-        "    if len(phrase) > 0:\n",
-        "      phrase = phrase + f['word'] + ' ' \n",
-        "  return phrase    "
+        "      word = ' '\n",
+        "    if len(word) > 0:\n",
+        "      word = word + f['word']\n",
+        "    if word != 's' and word != 'd' and word != '\\'re' and word != '\\'ve' and not (prev in '¥$€£' and word.isnumeric()) and word.lower() not in 'n\\'tmkx/' and word not in '..._^~=+*#:@;!?&/%':\n",
+        "      prev = word\n",
+        "      word = word + ' '  \n",
+        "  return word    "
       ],
       "execution_count": 0,
       "outputs": []
@@ -341,8 +347,10 @@
         "          sentence.update(words)\n",
         "          gist.extend(phrase)\n",
         "  result = str()\n",
+        "  prev = str()\n",
         "  for word in gist:\n",
-        "    if word != '\\'ve' and word != 'n\\'t' and word != '\\'d':\n",
+        "    if not (word.startswith('s ') or word.startswith('d ') or word.startswith('ve ') or word.startswith('re ')) and not (prev in '¥$€£' and word.isnumeric()) and word not in '..._^~=+*#:@;!?&/%':\n",
+        "      prev = word\n",
         "      result = result + ' '\n",
         "    result = result + word  \n",
         "  return result"
@@ -383,7 +391,7 @@
       },
       "source": [
         "def remove_from(past, modal, empty=1):\n",
-        "  #antecedents = past.copy()\n",
+        "  antecedents = past.copy()\n",
         "\n",
         "  for m in sorted(modal,key=len): # in order of longer consequents\n",
         "    for p in reversed(sorted(past,key=len)): # shorter antecedents\n",
@@ -391,14 +399,63 @@
         "          if p in past and len(past) > empty: # can't be left empty!\n",
         "            past.remove(p)  \n",
         "          \n",
-        "  #for a in antecedents:\n",
-        "  #  for c in modal: # consequents (i.e. potential future)\n",
-        "  #    if c in a: # a{c} wrapper around(potential) future\n",
-        "  #      if a in past and len(past) > empty:\n",
-        "  #          past.remove(a) # remove the pa{}st wrapper\n",
-        "  #          #print(a) # was problematic in some cases \n",
+        "  for a in antecedents:\n",
+        "    for c in modal: # consequents (i.e. potential future)\n",
+        "      if c in a: # a{c} wrapper around(potential) future\n",
+        "        if a in past and len(past) > empty:\n",
+        "            past.remove(a) # remove the pa{}st wrapper\n",
+        "            #print(a) # was problematic in some cases \n",
         "\n",
         "  return past          "
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aUKIAsKb9Cwf",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def defragment(past, text):\n",
+        "  prev = str() # previous fragment\n",
+        "  start = -1\n",
+        "  end = 0\n",
+        "  for p in reversed(sorted(past,key=len)):\n",
+        "    r = p.lstrip()\n",
+        "    #r = r.replace('--',' -- ')\n",
+        "    r = r.replace(' - ','-')\n",
+        "    r = r.replace('   ',' ')\n",
+        "    r = r.replace('  ',' ')\n",
+        "    r = r.replace(' .','.')\n",
+        "    r = r.replace(' ,',',')\n",
+        "    r = r.replace('( ','(')\n",
+        "    r = r.replace(' )',')')\n",
+        "    r = r.replace('$ ','$')\n",
+        "    r = r.replace(' %','%')\n",
+        "    r = r.replace('/ ','/')\n",
+        "    r = r.replace(' /','/')\n",
+        "    r = r.replace('Mr.','Mr. ')\n",
+        "    r = r.replace('Ms.','Ms. ')\n",
+        "    r = r.replace('Mrs.','Mrs. ')\n",
+        "    r = r.replace('.  ','. ') \n",
+        "    r = r.replace(' ;',';')\n",
+        "    r = r.replace(' nt','nt')\n",
+        "    try: \n",
+        "      start = text.index(r)\n",
+        "      #print(prev+' | '+r)\n",
+        "      index = text.find(prev+r)\n",
+        "      #print(index, end)\n",
+        "      if index >= end and len(word_tokenize(p)) > 1:\n",
+        "        prev = text[end:start]\n",
+        "        end = start + len(r)\n",
+        "      else: \n",
+        "        past.remove(p)  \n",
+        "    except ValueError:\n",
+        "        print('{'+r+'} not in: '+text)\n",
+        "  return past       "
       ],
       "execution_count": 0,
       "outputs": []
@@ -435,7 +492,7 @@
         "import nltk\n",
         "nltk.download('punkt')\n",
         "\n",
-        "original = \"Of course, if previous McCain voters would do whatever he suggested, then Graham would have been doing a lot better in the Granite State.\"\n",
+        "original = \"If we were really well-known and went out and advertised, our team would spend more time reading about opportunities we don't like, he said.\"\n",
         "\n",
         "verbs = list()\n",
         "modal = list()\n",
@@ -539,12 +596,15 @@
         "modal = remove_from(modal, past)\n",
         "modal = remove_from(modal, nounm)\n",
         "past = remove_from(past, modal)\n",
-        "past = remove_from(past, nounp)\n",
         "\n",
         "nounm = remove_from(nounm, modal,0)\n",
         "nounp = remove_from(nounp, past, 0)\n",
         "nounm = remove_from(nounm, verbs,0)\n",
         "nounp = remove_from(nounp, verbs,0)\n",
+        "\n",
+        "past = remove_from(past, nounp)\n",
+        "if len(past) > 1:\n",
+        "  past = defragment(past, text) \n",
         "\n",
         "verbs = remove_from(verbs, modal)\n",
         "verbs = remove_from(verbs, past)\n",
@@ -686,49 +746,61 @@
         "  modal = remove_from(modal, past)\n",
         "  modal = remove_from(modal, nounm)\n",
         "  past = remove_from(past, modal)\n",
-        "  past = remove_from(past, nounp)\n",
         "\n",
         "  nounm = remove_from(nounm, modal,0)\n",
         "  nounp = remove_from(nounp, past, 0)\n",
         "  nounm = remove_from(nounm, verbs,0)\n",
         "  nounp = remove_from(nounp, verbs,0)\n",
         "\n",
+        "  past = remove_from(past, nounp)\n",
+        "  if len(past) > 1:\n",
+        "    past = defragment(past, text) \n",
+        "\n",
         "  verbs = remove_from(verbs, modal) # not used below but can be! \n",
         "  verbs = remove_from(verbs, past)\n",
         "\n",
-        "  for p in past:\n",
-        "    p_row = pd.Series(data={\n",
-        "      'id': test_df['id'][ind]+'A'+ str(j),\n",
+        "  #assert len(modal) > 0 # can be legit (eg: 203585)\n",
+        "  for m in modal:\n",
+        "    m_row = pd.Series(data={\n",
+        "      'id': test_df['id'][ind]+'C'+ str(i),\n",
         "      'labels':'0',\n",
-        "      'text': p\n",
-        "    }, name = str(j) )\n",
-        "    past_df = past_df.append(p_row)   \n",
-        "    j = j+1\n",
+        "      'text': m\n",
+        "    }, name = str(i) )\n",
+        "    modal_df = modal_df.append(m_row)\n",
         "\n",
-        "    for m in modal:\n",
-        "      m_row = pd.Series(data={\n",
-        "        'id': test_df['id'][ind]+'C'+ str(i),\n",
-        "        'labels':'0',\n",
-        "        'text': m\n",
-        "      }, name = str(i) )\n",
-        "      modal_df = modal_df.append(m_row)\n",
+        "    who = str()\n",
+        "    for n in nounp:\n",
+        "      who = who  +  n + '/'\n",
         "\n",
-        "      who = str()\n",
-        "      for n in nounp:\n",
-        "        who = who  +  n + '/'\n",
+        "    what = str()\n",
+        "    for nn in nounm:\n",
+        "      what = what + '/' + nn\n",
         "\n",
-        "      what = str()\n",
-        "      for nn in nounm:\n",
-        "        what = what + '/' + nn   \n",
+        "    if len(past) > 0:\n",
+        "      for p in past:\n",
+        "        p_row = pd.Series(data={\n",
+        "          'id': test_df['id'][ind]+'A'+ str(j),\n",
+        "          'labels':'0',\n",
+        "          'text': p\n",
+        "        }, name = str(j) )\n",
+        "        past_df = past_df.append(p_row)   \n",
+        "        j = j+1   \n",
         "\n",
+        "        s_row = pd.Series(data={\n",
+        "          'id': test_df['id'][ind]+'A'+ str(j) + 'C'+ str(i),\n",
+        "          'labels':'0',\n",
+        "          'text': who + p + ' | ' + m + what\n",
+        "        }, name = str(i) )\n",
+        "        simple_df = simple_df.append(s_row) \n",
+        "    else:\n",
         "      s_row = pd.Series(data={\n",
         "        'id': test_df['id'][ind]+'A'+ str(j) + 'C'+ str(i),\n",
         "        'labels':'0',\n",
-        "        'text': who + p + ' | ' + m + what\n",
+        "        'text': who + ' | ' + m + what\n",
         "      }, name = str(i) )\n",
-        "      simple_df = simple_df.append(s_row) \n",
+        "      simple_df = simple_df.append(s_row)\n",
         "\n",
-        "      i = i+1\n",
+        "    i = i+1\n",
         "\n",
         "  sleep(1)  \n",
         "\n",
