Post-evaluation testing
Minor changes

--- a/SemEval2020_Task5_Subtask_1.ipynb
+++ b/SemEval2020_Task5_Subtask_1.ipynb
@@ -144,7 +144,9 @@
         "    'id': df[0],\n",
         "    'labels':['0']*df.shape[0],\n",
         "    'alpha':['a']*df.shape[0],\n",
-        "    'text': df[2].replace(r'[\\[\\'\\\"\\]]', '', regex=True)\n",
+        "    'text': df[2],\n",
+        "    'start':df[3],\n",
+        "    'end': df[4]\n",
         "})\n",
         "\n",
         "test_df.head(10)"
@@ -178,7 +180,7 @@
         "    'id': df[0],\n",
         "    'labels':['0']*df.shape[0],\n",
         "    'alpha':['a']*df.shape[0],\n",
-        "    'text': df[2].replace(r'[\\[\\'\\\"\\]]', '', regex=True)\n",
+        "    'text': df[2]\n",
         "})\n",
         "\n",
         "test_df.head()"
@@ -256,7 +258,7 @@
         "colab_type": "text"
       },
       "source": [
-        "START AGAIN - Execute all code below for each new model\n",
+        "START AGAIN - Execute all code below after Restart runtime (for each new model)\n",
         "\n"
       ]
     },
@@ -974,7 +976,7 @@
         "colab_type": "text"
       },
       "source": [
-        "RUN FINE-TUNING - (set `num_train_epochs` in `args` above)"
+        "RUN FINE-TUNING - set `num_train_epochs` in `args` above"
       ]
     },
     {
@@ -1053,7 +1055,7 @@
         "import os\n",
         "os.chdir('/content/outputs/')\n",
         "!ls\n",
-        "!zip submission_task1.zip subtask1.csv   "
+        "#!zip submission_task1.zip subtask1.csv   "
       ],
       "execution_count": 0,
       "outputs": []
